adjust padding for menu

--- a/_css/imba-v1.scss
+++ b/_css/imba-v1.scss
@@ -126,7 +126,8 @@ h4.course_sub {
 .title ul.nav {
 	display: block;
 	position: relative;
-	margin-left: 0;}
+	margin-left: 0;
+	padding: 0px;}
 	
 .title ul.nav li {
 	list-style: none;
