added ent6006 course id to template

--- a/css/imba-v1.scss
+++ b/css/imba-v1.scss
@@ -12,6 +12,7 @@
 /*F14 NET1000 GRAFF*/			&313314,
 /*F14 NET1000 WP */				&280388,
 
+/*S15 ENT6006 Morris*/			&314351,
 /*S15 FIN5405 Houston*/			&313868,
 /*S15 FIN6425 133H NIMAL*/		&312992,
 /*S15 FIN6425 1334 NIMAL*/		&312993,
