changed color of quiz icon to black

--- a/css/inline-icons.scss
+++ b/css/inline-icons.scss
@@ -100,7 +100,7 @@ p.ppt {
 	@include icon-style;}}
 p.quiz,p.quizzes_tap {
 	&:before {
-	color:#f36b03;
+	color:#ffffff;
 	content: "\F190";
 	@include icon-style;}}
 p.rss {
