--- a/css/inline-icons.scss
+++ b/css/inline-icons.scss
@@ -17,7 +17,7 @@ margin-right: 8px;}
 p.access {
 	background: url("img/inline_icons/access.png") no-repeat 0% 0%;}
 p.assignment {
-	color:black;
+	color: #000000;
 	content: "\F1C2";
 	@include icon-style;}
 p.book {
