added geb5114 gentry to template

--- a/css/imba-v1.scss
+++ b/css/imba-v1.scss
@@ -17,6 +17,7 @@
 /*S15 FIN6425 133H NIMAL*/		&312992,
 /*S15 FIN6425 1334 NIMAL*/		&312993,
 /*S15 FIN6626 Naranjo*/			&313879,
+/*S15 GEB5114 Gentry*/			&314558,
 /*S15 MAN5501 VAKHARIA*/		&313114, &314066,
 /*S15 MAR6930 Sturdivant*/		&312995, &312994,
 /*S15 QMB5303 PATHAK*/  		&313874 {
