added F15 course ids to template
ACG5065 KNECHEL, ECP5705 RUSH, FIN6626 NARANJO, GEB5212 BARNES, GEB5212
MCCAWLEY

--- a/css/imba-v1.scss
+++ b/css/imba-v1.scss
@@ -12,12 +12,17 @@
 /*F14 NET1000 GRAFF*/			&313314,
 /*F14 NET1000 WP */				&280388,
 
+/*S15 ACG5065 KNECHEL*/			&314730,
+/*S15 ECP5705 RUSH*/			&314729,
 /*S15 ENT6006 Morris*/			&314351,
 /*S15 FIN5405 Houston*/			&313868,
 /*S15 FIN6425 133H NIMAL*/		&312992,
 /*S15 FIN6425 1334 NIMAL*/		&312993,
+/*S15 FIN6626 NARANJO IC08*/ 	&314727,
 /*S15 FIN6626 Naranjo*/			&313879,
 /*S15 GEB5114 Gentry*/			&314558,
+/*S15 GEB5212 BARNES*/			&314728,
+/*S15 GEB5212 MCCAWLEY*/ 		&314731,
 /*S15 MAN5501 VAKHARIA*/		&313114, &314066,
 /*S15 MAR6930 Sturdivant*/		&312995, &312994,
 /*S15 QMB5303 PATHAK*/  		&313874 {
