--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -42,12 +42,9 @@ h1.page-title {
 	color: white;
 	padding: 10px;
 	padding-left: 4.5%;
-	margin: 0px; 
-	line-height: 1em;}
-
+	margin: 0px;}
 
 /* CONTAINER, CONTENT (BACKGROUNDS)*/
-
 .container {
 	width: 100%;
 	padding-left: 2%;
