removed .head styles
many unused styles in .head

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -67,21 +67,7 @@ h1.page-title {
 
 /* HOMEPAGE */
 .head {
-	width: auto;
-	height: auto;
-	min-height: 220px;
-	padding: 20px;
-	padding-left: 0;
-	margin-left: 0;
-	margin-right: 6%;
-	max-height: 220px;
-	margin-top: 20px;
-	-ms-word-break: break-word;
-	word-break: break-word;
-	background: transparent;
-	border: 0px;
-	border-radius: 0;
-	box-shadow: none;}
+	margin-right: 6%;}
 
 .prof {
 	width: 200px;
