--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -58,7 +58,7 @@ h1.page-title {
 	width:95%;
 	margin: 0 auto;
 	padding: 10px 2%;
-	background: rgb(255,255,255); 
+	background: whitesmoke; 
 	border-radius: 5px;
 	box-shadow: 0px 2px 3px 0px #363b44;
 	-moz-box-sizing: border-box;
