--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -83,7 +83,7 @@ h1.page-title {
 	margin-left: 240px;
 	margin-top: 10px;
 	color: white;
-	font-family: sans-serif;
+	font-family: 'Lato', sans-serif;
 	min-height: 220px;
 	-webkit-font-smoothing: antialiased !important;}
 	
@@ -97,36 +97,26 @@ h2.course_name {
 	
 h4.course_sub {
 	font-size: 250%;
-	font-weight: 400;
 	line-height: 1.1em;
 	margin: 0;
 	border-bottom: none;
 	text-shadow: 0px 1px 1px rgba(48,48,48,1);}
 	
 .title ul.nav {
-	display: block;
-	position: relative;
 	margin-left: 0;}
 	
 .title ul.nav li {
-	list-style: none;
-	float: left;
-	margin: 0px;
-	margin-bottom: 20px;
-	padding: 0px 10px; 
-	border: none;
-	background: transparent;
-	border-radius: 0;}
+	margin: 0px;}
+	
+.title ul.nav la:first-child {
+	padding-left: 0;
+}
 
-.title ul.nav li+li {border-left: 1px solid orange;}
+.title ul.nav li+li {
+	border-left: 1px solid orange;}
 
 .title ul.nav a {
 	color: white;
-	font-size: 18px;
-	font-weight: 400;
-	font-family: 'Lato', sans-serif;
-	width: auto;
-	text-decoration: none;
 	transition: color 0.5s ease;
 	letter-spacing: 1px;
 	border-bottom: none;}
