--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -109,8 +109,7 @@ h4.course_sub {
 	margin: 0px;}
 	
 .title ul.nav la:first-child {
-	padding-left: 0;
-}
+	padding-left: 0;}
 
 .title ul.nav li+li {
 	border-left: 1px solid orange;}
