css minor adjustments
.container padding top 20px
margin, bg color, border, radius in .title ul.nav
added .button + .button

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -48,6 +48,7 @@ h1.page-title {
 .container {
 	width: 100%;
 	padding-left: 2%;
+	padding-top: 20px;
 	padding-bottom: 80px;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -106,7 +107,10 @@ h4.course_sub {
 	margin-left: 0;}
 	
 .title ul.nav li {
-	margin: 0px;}
+	margin: 0;
+	background: transparent;
+	border: none;
+	border-radius: 0;}
 	
 .title ul.nav la:first-child {
 	padding-left: 0;}
@@ -124,6 +128,9 @@ h4.course_sub {
 	color: #ff9d42;
 	border-bottom: none;}
 
+.button + .button {
+	margin-left: 2%;}
+
 .button {
 	width: 150px;
 	height: 150px;
@@ -135,8 +142,8 @@ h4.course_sub {
 	transition: width .25s ease-in-out, height .25s ease-in-out, border-radius .25s ease-in-out;
 	position: relative;
 	float: left;
-	margin-left: 4%;}
-
+	}
+	
 .button:hover {
 	width: 150px;
 	height: 150px;}
@@ -168,17 +175,11 @@ h4.course_sub {
 	color: white;}
 	
 .button a:visited {
-	color: white;
-}
+	color: white;}
 	
 .grow {
-	position: relative;
-	top: 0px;
 	width: 150px;
 	height: 150px;
-	padding: 0;
-	background-color: rgba(235,142,0,0);
-	border-radius: 0;
 	transition: background-color .75s ease, border-radius .75s ease;}
 	
 .grow:hover {	
