--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -163,12 +163,7 @@ h4.course_sub {
 	top: 10px;}
 
 .button a:hover {
-	padding: 50px 0px 110px 0px;
-	width: 150px;
-	height: auto;
-	border-radius: 100%;
-	font-weight: 300;
-	color: white;}
+	padding: 50px 0px 110px 0px;}
 	
 .button a:visited {
 	color: white;}
