--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -129,14 +129,10 @@ h4.course_sub {
 	color: #ff9d42;
 	border-bottom: none;}
 
-.button + .button {
-	margin-left: 2%;}
-
 .button {
 	width: 150px;
 	height: 150px;
-	margin: 0 auto;
-	margin-bottom: 60px;
+	margin: 0 0 60px 4.5%;
 	border-radius: 100%;
 	box-shadow: 0px 1px 1px rgba(48,48,48,1) ;
 	background-color: rgba(233,233,233,1);  
