--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -174,26 +174,27 @@
 				background-color: rgba(235, 120, 50, .9);
 				border-radius: 100%;}
 			
-			/*IMAGE CAPTIONS*/
+			/* IMAGE CAPTIONS */
 			.caption a {
 				font-size: small;
 				display: block;
 				text-align: right;}
 				
 			.caption img {
-				width: 100%;}	
+				width: 100%;}
+				
+			/* ROW */
+			.row {
+				margin: 0 auto;}
 			
-			/* COLUMN
-			===============================*/
+			/* COLUMN */
 			.column {
 				float: left;
 				margin-left: 2%;
 				margin-right: 2%;
 				-moz-box-sizing: border-box;
 				-webkit-box-sizing: border-box;
-				box-sizing: border-box;
-				max-width: none;
-				
+								
 					&:first-child {
 					margin-left: 0;}
 				
@@ -230,26 +231,7 @@
 				/*===============================
 			END COLUMN */
 			
-			/* ROW
-			===============================*/
-			.clearfix {*zoom: 1;}
-			
-			.clearfix:before,
-			.clearfix:after {
-			  content: " ";
-			  display: table;}
-			 
-			.clearfix:after {
-			  clear: both;}
-			 
-			.row {
-			  overflow: visible;
-			  margin-bottom: 10px;
-			  margin: 0 auto;
-			  clear:both;}
-			/*===============================
-			END ROW */
-			
+						
 			/* H1, H3, H4, H5
 			===============================*/
 			h1 {
