--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -252,34 +252,22 @@
 					font-weight: 300;
 					font-size: 1.5em;
 					padding-left: 4.5%;
-					margin: 0;}
-					}
-					
-			/* ===============================
-			END SUBTITLE */
+					margin: 0;
+				}
+			}
 			
-			/* PARAGRAPH
-			===============================*/
+			/* PARAGRAPH */
 			p {
-				font-family: 'Helvetica', sans-serif;
 				font-size: 1.35em;
 				line-height: 1.5em;
 				word-spacing: 0.05em;
-				letter-spacing: 0.01em;
 				margin: 10px 0px 5px 0px;
-				font-weight: 400;
-				padding-right: 20px;
-				
 				
 				strong {font-weight: bold;}
-			
 				em {font-style: italic;}
-				}
-			/* ===============================
-			END PARAGRAPH */
+			}
 			
-				/* LINKS
-				===============================*/
+			/* LINKS */
 			.content {
 				a {
 				color: #24618c;
