added net1000 Online MSA course id

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -1,5 +1,6 @@
 .context-course_ {
 	/*IMBA TEMPLATE*/				&290915,
+	/*NET1000 Online MSE*/			&315315,
 	/*F14 ACG5065 KNECHEL*/			&270284,
 	/*F14 BUL5810 DIMATEO*/  		&270280,
 	/*F14 BUL5810 DIMATEO*/  		&304999,
