--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -46,25 +46,7 @@
 			
 			/* CONTAINER, CONTENT */
 			.container {
-				width: 100%;
-				padding-left: 2%;
-				padding-top: 20px;
-				padding-bottom: 80px;
-				-moz-box-sizing: border-box;
-				-webkit-box-sizing: border-box;
-				box-sizing: border-box;
 				background: #24618c;}
-			
-			.content {
-				width:95%;
-				margin: 0 auto;
-				padding: 10px 2%;
-				background: whitesmoke; 
-				border-radius: 5px;
-				box-shadow: 0px 2px 3px 0px #363b44;
-				-moz-box-sizing: border-box;
-				-webkit-box-sizing: border-box;
-				box-sizing: border-box;}
 			
 			/* HOMEPAGE */
 			.head {
@@ -265,10 +247,6 @@
 						
 			/* NAVIGATION */
 			ul.nav {
-				display: block;
-				margin-top: 10px;
-				margin-left: 2.5%;
-			
 				li {
 					list-style: none;
 					float: left;
@@ -285,12 +263,10 @@
 						color: black;
 						font-size: 16px;
 						font-family: 'Lato', sans-serif;
-						width: auto;
-						padding-bottom: 0px;
-						text-decoration: none;
 						border-bottom: 2px solid #FCFCFC;
 						background-color: transparent;
-						transition: border-bottom 0.5s ease;}
+						transition: border-bottom 0.5s ease;
+					}
 		
 					a:hover {border-bottom: 2px solid #ff9d42;}
 				} /*end li*/
