--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -29,231 +29,170 @@
 	/*S15 QMB5303 PATHAK*/  		&313874 {
 
 		#wiki_page_show {
-	
-			.user_content iframe {
-				width: 100%;} 
-				
-			.show-content.user_content.enhanced {
-				padding: 0px 0px;}
-				
-			h1.page-title {
-				background-color: #24618c;
-				font-family: 'Lato', sans-serif;
-				font-size: 4em; //changed to 3.5
-				color: white;
-				padding: 10px;
-				padding-left: 4.5%;
-				margin: 0px;}
 			
-			/* CONTAINER, CONTENT */
-			.container {
-				background: #24618c;}
+			// removes padding for wiki page content area 	
+// 			.show-content {padding: 0;}
 			
-			/* HOMEPAGE */
-			.head {
-				margin-left: 2.5%;
-				margin-right: 4.5%;}
+			// subtitle for the course, goes before <div class="container>	
+			.subtitle {background-color: #24618c;}
 			
+			// background color for the wiki page
+			.container {background: #24618c;}
+			
+			//=================
+			// COURSE HEADER
+			//=================
+			// instructor's photo
 			.prof {
-				width: 200px;
-				height: 200px;
+				background: url('course-style/_default/placeholder.png') no-repeat 0% 100%;
 				border-radius: 100%;
 				border: 5px solid whitesmoke;
 				background-repeat: no-repeat;
 				box-shadow: 0px 1px 1px rgba(48,48,48,1);
 				background-size: cover;
-				position: absolute;}	
-				
+			}
+			
+			//course and instructor's name, front page navigation
 			.title {
-				margin-left: 240px;
-				margin-top: 10px;
-				color: white;
-				font-family: 'Lato', sans-serif;
-				min-height: 220px;
-				-webkit-font-smoothing: antialiased !important;}
+				// course name				
+				h2  {
+					border-bottom: 2px solid orange;
+					text-shadow: 0px 1px 1px rgba(48,48,48,1);
+				}
 				
-			h2.course_name {
-				font-size: 400%;
-				font-weight: 600;
-				line-height: 1.1em;
-				margin: 0;
-				border-bottom: 2px solid orange;
-				text-shadow: 0px 1px 1px rgba(48,48,48,1);}
+				// instructor's name
+				h4 {
+					line-height: 1.1em;
+					margin: 0;
+					border-bottom: none;
+					text-shadow: 0px 1px 1px rgba(48,48,48,1);
+				}					
 				
-			h4.course_sub {
-				font-size: 250%;
-				line-height: 1.1em;
-				margin: 0;
-				border-bottom: none;
-				text-shadow: 0px 1px 1px rgba(48,48,48,1);}
-				
-			.title ul.nav {
-				margin-left: 0;}
-				
-			.title ul.nav li {
-				margin: 0;
-				background: transparent;
-				border: none;
-				border-radius: 0;}
-				
-			.title ul.nav la:first-child {
-				padding-left: 0;}
+				// front page navigation
+				ul.nav {
+					li:first-child {padding-left: 0;}
 			
-			.title ul.nav li+li {
-				border-left: 1px solid orange;}
+					li+li {border-left: 1px solid orange;}
 			
-			.title ul.nav a {
-				color: white;
-				transition: color 0.5s ease;
-				letter-spacing: 1px;
-				border-bottom: none;}
+					a {
+						color: white;
+						transition: color 0.5s ease;
+						border-bottom: none;
+					
+						&:hover {
+							color: #ff9d42;
+							border-bottom: none;
+						}
+					} // end a
+				} // end ul.nav
+			} // end .title
 			
-			.title ul.nav a:hover {
-				color: #ff9d42;
-				border-bottom: none;}
-			
+			//=================
+			// MODULE NAVIGATION
+			//=================		
 			.button {
-				width: 150px;
-				height: 150px;
-				margin: 0 0 60px 4.5%;
 				border-radius: 100%;
 				box-shadow: 0px 1px 1px rgba(48,48,48,1) ;
 				background-color: rgba(233,233,233,1);
 				background-size: cover;
 				transition: width .25s ease-in-out, height .25s ease-in-out, border-radius .25s ease-in-out;
-				position: relative;
-				float: left;}
+				float: left;
 				
-			.button:hover {
-				width: 150px;
-				height: 150px;}
-				
-			.button a {
-				font-family: "Lato",sans-serif;
-				font-size: 18px;
-				text-decoration: none;
-				display: block;
-				padding: 150px 0px 0px 0px;
-				color: white;
-				text-align: center;
-				transition: padding .5s ease, background-color .75s ease, border-radius .75s ease;
-				font-weight: 300;
-				letter-spacing: .5px;
-				position: relative;
-				top: 10px;}
+				a {
+					color: white;
+					transition: padding .5s ease, background-color .75s ease, border-radius .75s ease;
+					font-weight: 300;
+					
+					&:hover {padding: 50px 0px 110px 0px;}
+					&:visited {color: white;}
+				} // end a
+			} // end .button
 			
-			.button a:hover {
-				padding: 50px 0px 110px 0px;}
-				
-			.button a:visited {
-				color: white;}
-				
+			// creates the animation for .button on homepage
 			.grow {
 				width: 150px;
 				height: 150px;
-				transition: background-color .75s ease, border-radius .75s ease;}
-				
-			.grow:hover {	
-				padding: 0;
-				background-color: rgba(235, 120, 50, .9);
-				border-radius: 100%;}
-			
-			/* H3, H4 */
-			h3 {
-			margin-top: 0px;
-			font-size: 1.8em;
-			letter-spacing: .05em;
-			font-family: 'Lato', sans-serif;
-			border-bottom: 2px solid #ff9d42;}
-			
-			h4 {
-			font-size: 1.6em;
-			font-family: "Lato",sans-serif;
-			padding: 0 0 3px 0;
-			letter-spacing: 0.04em;
-			margin-bottom: 0px;
-			border-bottom: 2px solid #9e9e9e;}
-
-			/* SUBTITLE */
-			.subtitle {
-				background-color: #24618c;
-				
-				p {
-					color: white;
-					letter-spacing: .08em;
-					font-weight: 300;
-					font-size: 1.5em;
-					padding-left: 4.5%;
-					margin: 0;
+				transition: background-color .75s ease, border-radius .75s ease;
+				&:hover {	
+					padding: 0;
+					background-color: rgba(235, 120, 50, .9);
+					border-radius: 100%;
 				}
-			}
+			} // end .grow	
+	
+			//=================
+			// HEADINGS (H1 H2 H3 H4)
+			//=================
+			// targets canvas-generated page title
+			h1.page-title {background-color: #24618c;}
 			
-			/* LINKS, LISTS */
+			// wiki page headings
+			h3 {
+				margin-top: 0;
+				font-size: 2em;
+				border-bottom: 2px solid #ff9d42;
+			}
+			h4 {border-bottom: 2px solid #9e9e9e;}
+
+			//=================
+			// LISTS
+			//=================
+			// lists
+			/*
+li {
+				font-size: 120%;
+				line-height: 1.65em;
+			}	
+*/		
+// 			li p {font-size: inherit;}
+					
+			//=================
+			// WIKI PAGE
+			//=================					
+			// wiki page navigation
+			ul.nav li {
+				/*
+				font-family: 'Lato', sans-serif;
+				float: left;
+				margin: 0 10px 10px 0; */
+				
+				padding: 5px 10px;
+				background: #FCFCFC;
+				border: 1px solid #D3D3D3;
+				border-radius: 3px;
+		
+				a {
+// 					color: #333;
+					
+					font-size: 120%;
+					border-bottom: 2px solid #FCFCFC;
+					background-color: transparent;
+					transition: border-bottom 0.5s ease;
+				
+					&:hover {border-bottom: 2px solid #ff9d42;}
+				} // end a
+			} // end ul.nav li	
+			
+			// Using max-width keeps the iframe from getting cut-off by
+			// Canvas's default "overflow: hidden" when in smaller columns, 
+			// but keeps the video's orignal dimensions in larger columns. 
+// 			iframe {max-width: 100%}  
+
+				
+			//=================
+			// LINKS
+			//=================
 			.content {
 				a {
 					color: #24618c;
-					transition: color .3s ease;}
-			
-				a:hover {color:#ff9d42;}
-				a:visited {color: gray;}
-			
-				ul {
-					margin-left: 5%;
-					padding-top: 5px;
-					font-style: inherit;
-					margin-bottom: 5px;}
-			
-				ul li {
-					list-style: disc;
-					font-family: 'Helvetica', serif;
-					font-size: 18px;
-					line-height: 1.65em;
-					word-spacing: 0.1em;}
-			
-				ol {
-					margin-left: 5%;
-					padding-top: 5px;
-					font-style: inherit;
-					margin-bottom: 5px;	}
+					transition: color .3s ease;
 				
-				ol li {
-					font-family: 'Helvetica', serif;
-					line-height: 1.65em;
-					word-spacing: 0.1em;
-					font-size: 18px;}
-				
-				ol li p {
-					font-size: 18px;}
+					&:hover {color:#ff9d42;}
+					&:visited {color: gray;}
+				}
 			}		
 						
-			/* NAVIGATION */
-			ul.nav {
-				li {
-					list-style: none;
-					float: left;
-					margin-right: 10px;
-					margin-bottom: 10px;
-					background: #FCFCFC;
-					padding: 5px 10px;
-					border: 1px solid #D3D3D3;
-					-webkit-border-radius: 3px;
-					-moz-border-radius: 3px;
-					border-radius: 3px;
-		
-					a {
-						color: black;
-						font-size: 16px;
-						font-family: 'Lato', sans-serif;
-						border-bottom: 2px solid #FCFCFC;
-						background-color: transparent;
-						transition: border-bottom 0.5s ease;
-					}
-		
-					a:hover {border-bottom: 2px solid #ff9d42;}
-				} /*end li*/
-			} /*end ul*/	
-		
-			/* BACK TO TOP */
+			// .back styles the "back to top" buttons
 			.back {
 				margin-top: 10px;
 				margin-bottom: 10px;
@@ -268,59 +207,55 @@
 					border-bottom: 2px solid #ff9d42;
 					border-left: 2px solid transparent;
 					transition: border-top .3s ease, border-right .3s ease, 
-					border-bottom .3s ease, border-left .3s ease;}
-				
-				a:hover {
-					border-top: 2px solid #ff9d42;
-					border-right: 2px solid transparent;
-					border-bottom: 2px solid transparent;
-					border-left: 2px solid #ff9d42;}
-				
-				a:visited {color:#303030;}
-			} /*end .back*/
-			
-			/* BREAKPOINTS */
-			@media screen and (max-width: 1300px) {
-				.content {
-					.column.full,
-					.column.two-thirds,
-					.column.half,
-					.column.one-third,
-					.column.one-fourth {
-						margin: 0px;
-						margin-bottom: 10px;
-						width: 100%;}
-				} /*END .content*/
-			 
-				ul, ol {margin-left: 5%;}  
-				h1 {font-size: 300%;}
-				h3 {font-size: 150%;}
-			}
-				
-			@media screen and (max-width: 1300px) {
-				h2.course_name {
-					font-size: 250%;}
-				
-				h4.course_sub {
-					font-size: 200%;
-					font-weight: 400;}
-			}
-		}
-			
+					border-bottom .3s ease, border-left .3s ease;
+					
+					&:hover {
+						border-top: 2px solid #ff9d42;
+						border-right: 2px solid transparent;
+						border-bottom: 2px solid transparent;
+						border-left: 2px solid #ff9d42;
+					}
+					&:visited {color:#303030;}
+				} // end a
+			} // end .back 
+		} // end #wiki_page_show
+		
+		// =================	
 		// DISCUSSION STYLES
 		// =================
 		#discussion_topic {
-			header.discussion-section {background: #24618c;}
 			
+			// discussion title background color
+			header.discussion-section {background: #24618c;}
+			// dicussion title font color
+/*
 			h1.discussion-title,
 			header.discussion-section .discussion-pubdate {
 				color: white;
 			}
-			
+*/
+			// hides the avatar 
+/*
 			a.avatar,
 			a.author {
 				display: none;
 			}
+*/
 		} // #discussion_topic
+		
+		// Quiz Header
+		.quiz-header h1:first-child,
+		// Assignment Header
+		#assignment_show h1.title {
+/*
+			padding: 10px;
+			font-weight: 300;
+*/
+			background-color: #24618c;
+/*
+			color: white;
+			font-family: "Lato", sans-serif;
+*/
+		}
 	} 
 }
