--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -26,7 +26,15 @@
 	/*S15 GEB5212 MCCAWLEY*/ 		&314731,
 	/*S15 MAN5501 VAKHARIA*/		&313114, &314066,
 	/*S15 MAR6930 Sturdivant*/		&312995, &312994,
-	/*S15 QMB5303 PATHAK*/  		&313874 {
+	/*S15 QMB5303 PATHAK*/  		&313874,
+	
+	/*C15 BUL5810 Emerson*/			&316435, &316436,
+	/*C15 FIN6425 Nimal*/			&316434, &316437,
+	/*C15 GEB5114 Gentry*/			&316426, &316427,
+	/*C15 MAN5501 Carrillo*/ 		&316431, &316430,
+	/*C15 MAR5805 Alba*/			&316433,
+	/*C15 QMB5303 Pathak*/			&316441,
+	/*C15 REE6930 Archer*/			&316438, &316439 {
 
 		#wiki_page_show {
 			
