added on campus mse course id

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -1,5 +1,6 @@
 .context-course_ {
 	/*IMBA TEMPLATE*/				&290915,
+	/*NET1000 On Campus MSE*/		&316641,
 	/*NET1000 Online MSE*/			&315315,
 	/*NET1000 PDB*/ 				&315958,
 	/*F14 ACG5065 KNECHEL*/			&270284,
