--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -32,8 +32,11 @@
 	/*C15 BUL5810 Emerson*/			&316435, &316436,
 	/*C15 FIN6425 Nimal*/			&316434, &316437,
 	/*C15 GEB5114 Gentry*/			&316426, &316427,
+	/*C15 MAN5245 Clarke*/			&316432,
+	/*C15 MAN5245 Darnell*/			&316440,
 	/*C15 MAN5501 Carrillo*/ 		&316431, &316430,
 	/*C15 MAR5805 Alba*/			&316433,
+	/*C15 MAR6816 Lutz*/			&316428, &316429,
 	/*C15 QMB5303 Pathak*/			&316441,
 	/*C15 REE6930 Archer*/			&316438, &316439 {
 
