updated class to correct id
previously the styles were targeting .quiz_header h1:first-child which
was deprecated in favor for h1#quiz_title

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -280,14 +280,10 @@ li {
 		} // #discussion_topic
 		
 		// Quiz Header
-		.quiz-header h1:first-child,
+		h1#quiz_title,
 		// Assignment Header
 		#assignment_show h1.title {
-			padding: 10px;
-			font-weight: 300;
 			background-color: #24618c;
-			color: white;
-			font-family: "Lato", sans-serif;
 		}
 	} 
 }
