added text color to .title
This style is being moved over to both templates from the common-layout
since it is causing issues when a course finishes. When the  imba or
wcba template is removed the .title style persists via the
common-layout and makes the content in the title header illegible.

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -74,6 +74,7 @@
 			
 			//course and instructor's name, front page navigation
 			.title {
+				color: white;
 				// course name				
 				h2  {
 					border-bottom: 2px solid orange;
