--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -28,7 +28,9 @@
 	/*C15 MAR5805 Alba*/			&316433,
 	/*C15 MAR6816 Lutz*/			&316428, &316429,
 	/*C15 QMB5303 Pathak*/			&316441,
-	/*C15 REE6930 Archer*/			&316438, &316439 {
+	/*C15 REE6930 Archer*/			&316438, &316439,
+	
+	/*F15 FIN5405 Houston*/			&317348 {
 
 		#wiki_page_show {
 			
