Added course-id for MAN5245 Darnell
Points IMBA template to MAN5245 Darnell

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -30,7 +30,8 @@
 	/*C15 QMB5303 Pathak*/			&316441,
 	/*C15 REE6930 Archer*/			&316438, &316439,
 	
-	/*F15 FIN5405 Houston*/			&317348 {
+	/*F15 FIN5405 Houston*/			&317348,
+	/*F15 MAN5245 Darnell*/			&316440 {
 
 		#wiki_page_show {
 			
