added NET1000 traditional

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -3,6 +3,7 @@
 	/*NET1000 On Campus MSE*/		&316641,
 	/*NET1000 Online MSE*/			&315315,
 	/*NET1000 PDB*/ 				&315958,
+	/*NET1000 Traditional*/			&317802,
 	
 	/*S15 ACG5065 KNECHEL*/			&314730,
 	/*S15 ECP5705 RUSH*/			&314729,
