added net1000 course ids
Needed template for three NET1000 classes. Added the course ids.

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -1,9 +1,12 @@
 .context-course_ {
 	/*IMBA TEMPLATE*/				&290915,
+	/*NET1000 DBA*/					&280374,
+	/*NET1000 IMBA*/				&313314,
 	/*NET1000 On Campus MSE*/		&316641,
 	/*NET1000 Online MSE*/			&315315,
 	/*NET1000 PDB*/ 				&315958,
 	/*NET1000 Traditional*/			&317802,
+	/*NET1000 WP MBA*/				&280388,
 	
 	/*S15 ACG5065 KNECHEL*/			&314730,
 	/*S15 ECP5705 RUSH*/			&314729,
