updated commenting style
Updated the commenting style since the scss compiler was updated and
won’t allow me to use inline commenting. Very annoying…

--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -1,40 +1,95 @@
 .context-course_ {
-	/*IMBA TEMPLATE*/				&290915,
-	/*NET1000 DBA*/					&280374,
-	/*NET1000 IMBA*/				&313314,
-	/*NET1000 On Campus MSE*/		&316641,
-	/*NET1000 Online MSE*/			&315315,
-	/*NET1000 PDB*/ 				&315958,
-	/*NET1000 Traditional*/			&317802,
-	/*NET1000 WP MBA*/				&280388,
+	//IMBA TEMPLATE
+		&290915,
+	//NET1000 DBA
+		&280374,
+	//NET1000 IMBA
+		&313314,
+	//NET1000 On Campus MSE
+		&316641,
+	//NET1000 Online MSE
+		&315315,
+	//NET1000 PDB
+		&315958,
+	//NET1000 Traditional
+		&317802,
+	//NET1000 WP MBA
+		&280388,
 	
-	/*S15 ACG5065 KNECHEL*/			&314730,
-	/*S15 ECP5705 RUSH*/			&314729,
-	/*S15 ENT6006 Morris*/			&314351,
-	/*S15 FIN5405 Houston*/			&313868,
-	/*S15 FIN6425 133H NIMAL*/		&312992,
-	/*S15 FIN6425 1334 NIMAL*/		&312993,
-	/*S15 FIN6626 NARANJO IC08*/ 	&314727,
-	/*S15 FIN6626 Naranjo*/			&313879,
-	/*S15 GEB5114 Gentry*/			&314558,
-	/*S15 GEB5212 BARNES*/			&314728,
-	/*S15 GEB5212 MCCAWLEY*/ 		&314731,
-	/*S15 MAN5501 VAKHARIA*/		&313114, &314066,
-	/*S15 MAR6930 Sturdivant*/		&312995, &312994,
-	/*S15 QMB5303 PATHAK*/  		&313874,
+	//S15 ACG5065 Knechel
+		&314730,
+	//S15 ECP5705 Rush
+		&314729,
+	//S15 ENT6006 Morris
+		&314351,
+	//S15 FIN5405 Houston
+		&313868,
+	//S15 FIN6425 133H Nimal
+		&312992,
+	//S15 FIN6425 1334 Nimal
+		&312993,
+	//S15 FIN6626 IC08 Naranjo
+		&314727,
+	//S15 FIN6626 Naranjo
+		&313879,
+	//S15 GEB5114 Gentry
+		&314558,
+	//S15 GEB5212 Barnes
+		&314728,
+	//S15 GEB5212 McCawlet
+		&314731,
+	//S15 MAN5501 Vakharia
+		&313114, &314066,
+	//S15 MAR6930 Sturdivant
+		&312995, &312994,
+	//S15 QMB5303 Pathak
+		&313874,
 	
-	/*C15 BUL5810 Emerson*/			&316435, &316436,
-	/*C15 FIN6425 Nimal*/			&316434, &316437,
-	/*C15 GEB5114 Gentry*/			&316426, &316427,
-	/*C15 MAN5245 Clarke*/			&316432,
-	/*C15 MAN5245 Darnell*/			&316440,
-	/*C15 MAN5501 Carrillo*/ 		&316431, &316430,
-	/*C15 MAR5805 Alba*/			&316433,
-	/*C15 MAR6816 Lutz*/			&316428, &316429,
-	/*C15 QMB5303 Pathak*/			&316441,
-	/*C15 REE6930 Archer*/			&316438, &316439,
+	//C15 BUL5810 Emerson
+		&316435, &316436,
+	//C15 FIN6425 Nimal
+		&316434, &316437,
+	//C15 GEB5114 Gentry
+		&316426, &316427,
+	//C15 MAN5245 Clarke
+		&316432,
+	//C15 MAN5245 Darnell
+		&316440,
+	//C15 MAN5501 Carrillo
+		&316431, &316430,
+	//C15 MAR5805 Alba
+		&316433,
+	//C15 MAR6816 Lutz
+		&316428, &316429,
+	//C15 QMB5303 Pathak
+		&316441,
+	//C15 REE6930 Archer
+		&316438, &316439,
 	
-	/*F15 FIN5405 Houston*/			&317348 {
+	//F15 ACG5065 Knechel
+		&318605,
+	//F15 BUL5810 DiMatteo
+		&318595, &318602,
+	//F15 ECP5705 Rush
+		&318604,		
+	//F15 FIN5405 Houston
+		&317348,
+	//F15 FIN6626 Naranjo
+		&318594, &318601,
+	//F15 GEB5212 Barnes
+		&318603,
+	//F15 GEB5212 McCawley
+		&318606,
+	//F15 MAN6466 Callahan
+		&318628, &318591,
+	//F15 MAN6637 Kraft
+		&318592, &318593,
+	//F15 MAR5805 Alba
+		&318600,
+	//F15 MAR6816 Lutz
+		&318596, &318597,
+	//F15 MAR6930 Sturdivant
+		&318598, &318599 {
 
 		#wiki_page_show {
 			
