--- a/css/imba-template.scss
+++ b/css/imba-template.scss
@@ -222,7 +222,16 @@
 				border-bottom: 2px solid #ff9d42;
 				line-height: 36px;
 			}
-			h4 {border-bottom: 2px solid #9e9e9e;}
+			
+			h4 {
+				border-bottom: 2px solid #9e9e9e;
+				
+				//to be used to seperate modules on the front page
+				&.section {
+					color: white;
+					margin-bottom: 20px;
+					border-bottom: 1px solid #fff;}
+			}
 
 			//=================
 			// LISTS
